Add download progress with axios

--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "test": "nyc --reporter=html --reporter=text --report-dir=.coverage --exclude='./__test/*.spec.js' mocha --recursive './__test/*.spec.js'"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "crypto": "^1.0.1",
     "decompress": "^4.2.0",
     "decompress-bzip2": "^4.0.0",
     "fs": "^0.0.1-security",
-    "http": "^0.0.1-security",
-    "https": "^1.0.0",
     "line-reader": "^0.4.0",
     "mocha": "^7.1.1",
     "nyc": "^15.0.0",
+    "path": "^0.12.7",
+    "progress": "^2.0.3",
     "sinon": "^9.0.1"
   }
 }
